--- a/My Website.html
+++ b/My Website.html
@@ -84,7 +84,7 @@ th {
   <body>
     <main> <h1>Home page of Birds I View.com</h1>
 <p>Hi! My name is Jared Froese. I'm a cybersecurity student hoping to use my education to help you keep your hoem safe from unwanted content online 
-    <a href="2269983142">Call</a>. Here you can find my number for further questions. Or if you prefer my email <a href="froesejared@gmail.com">Email</a> </p>
+    <a href=tel:"2269983142">Call</a>. Here you can find my number for further questions. Or if you prefer my email <a href="froesejared@gmail.com">Email</a> </p>
 <h2>Projects</h2>
 <ul>
 <li>
