--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Home page of Guardiands.com </title>
     <link rel="icon" href="data:,">
     <style> body {
-  background-image: url("Background.jpg");
+  background-image: url("Background.png");
   background-size: cover; /* Ensures the image covers the entire viewport */
   background-repeat: repeat-x; /* Prevents the image from repeating */
   background-position: center; /* Centers the image in the viewport */
@@ -33,7 +33,7 @@
         }
 
         .header-logo img {
-          border-image-source: "Hi.png";
+          border-image-source: "LogoMostlyFinal.png";
           max-width: 100px; /* Adjust width as needed */
             height: auto;
         }
