--- a/index.html
+++ b/index.html
@@ -1,141 +1,71 @@
 <!DOCTYPE html>
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title> Home page of Guardiands.com </title>
-    <link rel="icon" href="data:,">
-    <style> body {
-  background-image: url("Background.png");
-  background-size: cover; /* Ensures the image covers the entire viewport */
-  background-repeat: repeat-x; /* Prevents the image from repeating */
-  background-position: center; /* Centers the image in the viewport */
-  height: 100vh; /* Ensures the body takes up the full viewport height */
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 10px;
-  line-height: 1.4;
-  font-size: 30px;
-  font-family: sans-serif;
-  color: #A9DF98;
-}
-
-/* #97DEA2 minty green #4C4C4C grey #A9DF98 more green #DEDC97 beige #97DEBA blue */
-
-.header-logo {
-            position: fixed; /* Keeps the logo fixed at the top */
-            top: 0;
-            left: 0;
-            width: 20%; /* Makes the logo span the full width */
-            /* background-color: rgba(0, 0, 0, 0.5);  Optional: add a semi-transparent background for better visibility */
-            padding: 0px;
-            z-index: 1000; /* Ensures the logo is above other content */
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Website Title</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            background-image: url("background.jpg");
+            background-position: top;
+            background-size: cover;
         }
-
-        .header-logo img {
-          border-image-source: "LogoMostlyFinal.png";
-          max-width: 100px; /* Adjust width as needed */
-            height: auto;
+        header {
+            display: flex;
+            align-items: center;
+            padding: 5px;
+            background-color: rgba(235, 213, 173, .8);
         }
-
+        header img {
+            height: 90px;
+            margin-right: 20px;
+            z-index: 1000;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 24px;
+        }
         main {
-            margin-top: 120px; /* Ensure main content is below the fixed header */
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 200px;
         }
+        footer {
+            /*background-color: #6da2a6;*/
+            text-align: center;
+            padding: 3px;
+            background-color: rgba(109, 162, 166, .5);
+        }
+    </style>
+</head>
+<body>
 
+<header>
+    <img src="Logo.png" alt="Logo">
+    <h1>Guardian Digital Surveillance</h1>
+</header>
 
-footer {
-  padding: 1rem 0;
-  border-top: solid 2px #ffffff;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  margin: 1em auto;
-}
-
-a {
-  text-decoration: none;
-  color: #97DEBA;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-ul {
-  list-style-type: '›';
-  padding-left: 0.4rem;
-}
-
-li {
-  margin: 0.5em 0;
-  padding-left: 0.7rem;
-}
-
-li::marker {
-  font-weight: bold;
-}
-
-code {
-  white-space: pre;
-  display: block;
-  overflow-x: auto;
-  padding: 0.5em;
-  margin: 0.5em 0;
-  border: solid 1px #ffffff;
-}
-
-hr {
-  border: solid 1px #ccc;
-  margin: 1rem 0;
-}
-
-table {
-  border-collapse: collapse;
-  margin: 1.5rem 0;
-  word-break: break-word;
-}
-
-td, th {
-  border: 1px solid #ffffff;
-  text-align: start;
-  padding: 0.5rem;
-}
-
-th {
-  background-color: #ffffff;
-  font-weight: bold;
-} </style>
-  </head>
-  <body>
-    <main> </>
-<p style="text-align: left;">At Guardian Digital Surveillance, we understand that the online world can be both exciting and challenging for young families. As parents ourselves, we are dedicated to helping you create a safe and nurturing digital environment for your children.
-
-  Our mission is to empower you with robust parental controls that allow you to monitor, manage, and guide your family’s online experiences with ease and confidence. From setting content filters to managing screen time, our solutions are designed to give you peace of mind while ensuring that your children can explore and learn in a secure online space.
-  
-  We believe in fostering a healthy balance between technology and family life, and our user-friendly tools are tailored to meet the unique needs of your household. Let us help you take control of your family’s digital world, so you can focus on what truly matters – spending quality time together.
-  
-  Thank you for choosing Guardian Digital Surveillance. We’re here to support you every step of the way.
-
-    <a href=tel:"2269983142">Call</a>. Here you can find my number for further questions. Or if you prefer my email <a href="mailto: froesejared@gmail.com">Email</a> </p>
-<div class="header-logo">
-  <img src="Hi.png" alt="Website Logo">
-</div>
-
-<h2>Misc</h2>
+<main>
+    <div>
+        <h2>Are you worried about your childs online activity</h2>
+        <p> It is getting harder and harder to know what your child is consuming online and protect them. 
+            That is where Guardian Digital Surveillance comes in we are here to talk with you and help you keep your child safe through parental blockers and proper education on internet safety.</p>
+    </div>
 </main>
-    <footer>
-      <nav>
-        <a href="https://www.instagram.com/guardian_digital_surveillance/#">Instagram</a>
-        -
-        <a href="https://github.com/cactushurt">github</a>
-        -
-        Email: froesejared@guardiands.ca 
-        Phone Number: 226-9983142
-      </nav>
-    </footer>
-  
 
+<footer>
+    <h3>Contact Us</h3>
+    <p>Email: <a href="mailto: froesejared@guardiands.ca">froesejared@guardiands.ca</a></p>
+    <p>Call: <a href=tel:"2269983142">(226) 998-3142</a></p>
+</footer>
 
-</body></html>
+</body>
+</html>
