--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <meta name="description" content="Guardian Digital Surveillance - Keeping your child safe online with parental controls and education on internet safety.">
+    <title>Guardian Digital Surveillance</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,7 +20,7 @@
         header {
             display: flex;
             align-items: center;
-            padding: 5px;
+            padding: 10px 20px;
             background-color: rgba(235, 213, 173, .8);
         }
         header img {
@@ -36,35 +37,51 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 200px;
+            padding: 50px 20px; /* Reduced padding for mobile */
+            text-align: center;
         }
         footer {
-            /*background-color: #6da2a6;*/
             text-align: center;
-            padding: 3px;
+            padding: 10px;
             background-color: rgba(109, 162, 166, .5);
+        }
+        /* Media query for mobile devices */
+        @media (max-width: 600px) {
+            header h1 {
+                font-size: 20px;
+            }
+            main {
+                padding: 30px 10px; /* Further reduced padding */
+            }
+            main h2 {
+                font-size: 18px; /* Smaller heading for mobile */
+            }
+            main p {
+                font-size: 18px; /* Adjusted paragraph size */
+            }
         }
     </style>
 </head>
 <body>
 
 <header>
-    <img src="Logo.png" alt="Logo">
+    <img src="Logo.png" alt="Guardian Digital Surveillance Logo">
     <h1>Guardian Digital Surveillance</h1>
 </header>
 
 <main>
     <div>
-        <h2>Are you worried about your childs online activity</h2>
-        <p> It is getting harder and harder to know what your child is consuming online and protect them. 
-            That is where Guardian Digital Surveillance comes in we are here to talk with you and help you keep your child safe through parental blockers and proper education on internet safety.</p>
+        <h2>Are you worried about your child's online activity?</h2>
+        <p>It is getting harder to know what your child is consuming online and how to protect them.</p> 
+        <p>That is where Guardian Digital Surveillance comes in.</p> 
+        <p>We are here to talk with you and help you keep your child safe through parental blockers and proper education on internet safety.</p>
     </div>
 </main>
 
 <footer>
     <h3>Contact Us</h3>
-    <p>Email: <a href="mailto: froesejared@guardiands.ca">froesejared@guardiands.ca</a></p>
-    <p>Call: <a href=tel:"2269983142">(226) 998-3142</a></p>
+    <p>Email: <a href="mailto:froesejared@guardiands.ca">froesejared@guardiands.ca</a></p>
+    <p>Call: <a href="tel:2269983142">(226) 998-3142</a></p>
 </footer>
 
 </body>
