--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Guardian Digital Surveillance - Keeping your child safe online with parental controls and education on internet safety.">
     <title>Guardian Digital Surveillance</title>
     <style>
+        
+      
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -13,9 +15,10 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
-            background-image: url("background.jpg");
+            background-image: url("background.png");
             background-position: top;
-            background-size: cover;
+            background-size: 100%;
+            background-repeat: repeat;
         }
         header {
             display: flex;
@@ -33,7 +36,7 @@
             font-size: 24px;
         }
         main {
-            flex: 1;
+            min-height: calc(100vh - 100px);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -41,9 +44,20 @@
             text-align: center;
         }
         footer {
-            text-align: center;
-            padding: 10px;
-            background-color: rgba(109, 162, 166, .5);
+            display: flex; /* Use flexbox */
+            flex-direction: column;
+            justify-content: center; /* Center other content */
+            align-items: center; /* Vertically center items */
+            margin-top: 1427px;
+            margin-right: 580px;
+        }
+        .footer-left {
+            font-size: 30px;
+        }
+        .footer-leftunder{
+            font-size: 30px;
+            margin-top: -30px;
+            margin-right: 170px;
         }
         /* Media query for mobile devices */
         @media (max-width: 600px) {
@@ -64,12 +78,12 @@
 </head>
 <body>
 
-<header>
+<!-- <header>
     <img src="Logo.png" alt="Guardian Digital Surveillance Logo">
     <h1>Guardian Digital Surveillance</h1>
-</header>
+</header> -->
 
-<main>
+<!-- <main>
     <div>
         <h2>Are you worried about your child's online activity?</h2>
         <p>It is getting harder to know what your child is consuming online and how to protect them.</p> 
@@ -77,11 +91,15 @@
         <p>We are here to talk with you and help you keep your child safe through parental blockers and proper education on internet safety.</p>
     </div>
 </main>
-
+ -->
 <footer>
-    <h3>Contact Us</h3>
-    <p>Email: <a href="mailto:froesejared@guardiands.ca">froesejared@guardiands.ca</a></p>
-    <p>Call: <a href="tel:2269983142">(226) 998-3142</a></p>
+    <div class="footer-left">
+        <p><a href="mailto:froesejared@guardiands.ca">froesejared@guardiands.ca</a></p>
+    </div>
+    <div class="footer-leftunder">
+        <p><a href="tel:2269983142">(226) 998-3142</a></p>
+    </div>
+    </footer>
 </footer>
 
 </body>
