--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
+            margin: 0 auto;
             padding: 0;
             display: flex;
             flex-direction: column;
-            height: 100vh;
+            height: 80vw;
             background-image: url("background.png");
             background-position: top;
             background-size: cover; /* Changed to cover for better fitting */
@@ -44,25 +44,27 @@
         }
         footer {
             position: absolute; /* Fixed position for footer */
-            bottom: -780px; /* Adjust as needed for vertical positioning */
-            left: 20%; /* Center horizontally */
+            bottom: -54vw; /* Adjust as needed for vertical positioning */
+            left: 22vw; /* Center horizontally */
             transform: translateX(-50%); /* Center alignment correction */
             display: flex;
             flex-direction: column;
             align-items: center; /* Vertically center items */
-            padding: 10px; /* Padding for spacing */
+            padding: 5vw; /* Padding for spacing */
+            background-color: transparent;
         }
         .footer-left {
-            font-size: 20px; /* Adjusted for consistency */
-            margin: 5px 0; /* Space between items */
+            font-size: 2vw; /* Adjusted for consistency */
+            margin: -.5vw; /* Space between items */
         }
         .footer-leftunder{
-            margin-right: 10%;
-            font-size: 20px; /* Adjusted for consistency */
-            margin: 5px 0; /* Space between items */
+            margin-right: 10vw;
+            font-size: 2vw; /* Adjusted for consistency */
+             /* Space between items */
         }
         /* Media query for mobile devices */
         @media (max-width: 600px) {
+            
             header h1 {
                 font-size: 20px;
             }
@@ -99,7 +101,7 @@
         <p><a style="text-decoration: none;" href="mailto:froesejared@guardiands.ca">froesejared@guardiands.ca</a></p>
     </div>
     <div class="footer-leftunder">
-        <p><a style="text-decoration: none;" href="tel:2269983142">(226) 998-3142&ensp;&emsp;&emsp;&emsp;&emsp;&emsp;</a></p>
+        <p><a style="text-decoration: none;" href="tel:2269983142">(226) 998-3142</a></p>
     </div>
 </footer>
 
