--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
     <p>Screen Timers</p>
     <p>Application Blocking</p>
     <p>Internet Monitoring</p>
+    <p>Security Cameras</p>
 </div>
 
 <div class="bold-heading">
@@ -272,11 +273,14 @@
 <div class="about-us">
     <h1>About Us</h1>
     <p>At Guardian Digital Surveillance, we provide personalized and simple</p>
-    <p>parental controls to help keep your children safe online. Our easy-to-use </p>
-    <p>solutions are designed for your family’s unique needs, giving you</p>
-    <p>peace of mind as your child explores the digital world. Let’s </p>
-    <p>create a safer online environment together!</p>
+    <p>parental controls to help keep your children safe online. Our easy-to-use</p>
+    <p>solutions are designed for your family&apos;s unique needs, giving you</p>
+    <p>peace of mind as your child explores the digital world. We also offer</p>
+    <p>high-quality security cameras to protect your home and loved ones,</p>
+    <p>ensuring hassle free safety both online and offline. </p>
+    <p>Let&apos;s create a safer environment together!</p>
 </div>
+
 
 <!-- <main>
     <div>
